--- a/roum/3주차.md
+++ b/roum/3주차.md
@@ -1,15 +1,14 @@
 # 레치가 1비트를 기억하는 방법
 
-✅ 래치란 뭐야?
-래치는 게이트(논리회로)를 이용해서 만든 "기억 장치"야.
-컴퓨터 속에서 0 아니면 1 하나를 **기억(저장)**하는 역할을 해.
+✅ 래치란?
+: 래치는 게이트(논리회로)를 이용해서 만든 기억 장치.
+컴퓨터 속에서 0 아니면 1 하나를 **기억(저장)**하는 역할
 
-스위치를 켰을 때 불이 계속 켜져 있는 것처럼
-래치도 어떤 값을 입력하면 계속 그 값을 유지해.
+스위치를 켰을 때 불이 계속 켜져 있는 것처럼 래치도 어떤 값을 입력하면 계속 그 값을 유지함
 
 ✅ 어떻게 1비트를 기억할까?
 
-## OR 게이트 래치
+## 1) OR 게이트 래치
 
 : OR 게이트 두 개를 서로 연결해서 만든다. 어떤 값을 기억할 수 있다.
 
@@ -21,7 +20,7 @@
 
   - A 게이트: 출력이 B 게이트의 입력으로 연결됨
   - B 게이트: 출력이 A 게이트의 입력으로 연결됨  
-    → 이로 인해 **서로 피드백을 주고받는 구조**가 형성됩니다.
+    → 이로 인해 **서로 피드백을 주고받는 구조**가 형성.
 
 - **입력**
 
@@ -42,7 +41,7 @@
 | (0, 1)      | Q = 0          | **Reset**: 0을 저장          |
 | (1, 1)      | ❗ 불안정 상태 | **금지**: 동시에 S, R은 불가 |
 
-> ⚠️ `(1, 1)` 입력은 동작이 불안정하므로 **사용하지 않아야 합니다.**
+> ⚠️ `(1, 1)` 입력은 동작이 불안정하므로 **사용하지 않아야 함.**
 
 => 서로 연결된 구조(피드백) 때문에
 한 번 출력된 값이 다시 입력으로 돌아와서,
@@ -53,7 +52,7 @@
 논리 게이트 생긴거
 ![logic-gates](https://fineproxy.org/wp-content/uploads/2023/05/OR-logic-gate.jpg)
 
-# SR latch(Set/Reset)
+## 2) SR latch(Set/Reset)
 
 ![SRlatch](https://sub.allaboutcircuits.com/images/04173.png)
 
@@ -72,10 +71,10 @@
 | (0, 1)      | 0      | 1      | **Reset**: 0 저장    |
 | (1, 1)      | ❌     | ❌     | ❗ **금지 상태**     |
 
-# 게이트가 있는 SRlatch
+## 게이트가 있는 SR latch
 
 - 기본 SR 래치는 Set(S) 또는 Reset(R)을 바로바로 받아서 반응
-- 게이트드 SR 래치는 **제어 신호(Enable, 또는 Clock)**가 있어야만 S와 R 입력이 진짜로 동작하게 됨
+- Gated SR latch는 **제어 신호(Enable, 또는 Clock)**가 있어야만 S와 R 입력이 진짜로 동작하게 됨
   => 게이트드 SR 래치에서는 S와 R이 바로 래치에 들어가는 게 아니라, 먼저 AND 게이트를 지남
 
 ```
@@ -86,12 +85,28 @@ R' = R AND E
 
 => 클럭 신호를 갖는 플립플롭의 기초
 
-# 플립플롭
+## 3) 플립플롭
 
-: 플립플롭은 "기억 상자"야. 0 아니면 1 하나의 값만 기억할 수 있는 장치야. 쉽게 말해, 플립하면 1, 플롭하면 0!
+: 플립플롭은 0 아니면 1 하나의 값만 기억할 수 있는 장치. 플립하면 1, 플롭하면 0!
 
 - 래치는 입력이 들어오면 바로바로 반응 -> 타이밍 맞추기 어려움
   -> 정해진 순간에만 반응하는(clock 신호) 플립플롭 탄생
   -> 컴퓨터가 시간에 맞춰 계산
+
+### D 플립플롭
+: 플립플롭 종류 중 하나로, 클럭이 0에서 1로 바뀌는 순간에 D라는 입력값을 기억하는 구조. 
+
+-> Clock은 0(low) -> 1(high) -> 0 이렇게 반복하는데, 기억할 타이밍을 알려준다.
+-> 중요한 것은 0이냐 1이냐가 아니라, 0 -> 1 올라가는 순간임. **상승예지(rising edge)** 라고 함.
+
+
+## 4) 레지스터
+: 여러 개의 D 플립플롭을 나란히 연결한 기억 상자.
+
+
+## 5) 메모리
+: 메모리는 수많은 레지스터처럼 생긴 저장 셀(cell)들이 쭈—욱 모여 있는 구조
+
+
 
 # 임의 접근 메모리 Rendom access memory (RAM) 와 읽기 전용 메모리 Read-only memory (ROM)
