--- a/roum/4주차.md
+++ b/roum/4주차.md
@@ -1,1 +1,11 @@
+# 4장 컴퓨터 내부 구조
 
+컴퓨터란: 비트를 조작하는 회로로, 다음과 같이 이루어져 있다.
+
+https://velog.velcdn.com/images/fstwon/post/14a8f7d9-b6c9-4047-bae5-c49b84659057/image.png
+
+1)메모리 : 조작한 비트들을 저장할 장소
+2)입출력: 컴퓨터에 정보를 전달하거나 컴퓨터에서 정보를 가져오는 방법
+3)CPU : 실제 계산을 처리하는 부품
+
+https://velog.velcdn.com/images/fstwon/post/104c5217-cdb1-4642-be4e-23053142e6dd/image.png
