--- a/roum/4주차.md
+++ b/roum/4주차.md
@@ -9,3 +9,11 @@
 3)CPU : 실제 계산을 처리하는 부품
 
 ![program](https://velog.velcdn.com/images/fstwon/post/104c5217-cdb1-4642-be4e-23053142e6dd/image.png)
+
+
+# ALU Arithmetic Logic Unit 산술 논리 장치
+
+![alu](https://blog.kakaocdn.net/dn/Y7jHY/btrwm96XDT4/8dVm4ophfTHPRG2SrIjog1/img.png)
+
+- 명령코드(opcode): 피연산자에 대해 alu에 어떤 연샂자를 적용할지 지정
+- 조건코드: 결과에 대한 추가 정보가 들어감(마지막 수행 결과가 음수인지, 마지막 연산 결과가 0인지, 마지막 연산에서 오버플로 혹은 언더플로가 생겼는지)
