--- a/roum/4주차.md
+++ b/roum/4주차.md
@@ -69,5 +69,17 @@
 #  컴퓨터 내부에서 명령어를 실행하기 위한 데이터 흐름과 제어 신호
 ![Screenshot 2025-04-03 at 9 03 17 PM](https://github.com/user-attachments/assets/c6fd0ac7-3ae6-4c40-975e-e36dd9c9a579)
 
+1. 명령어를 가져오기 (Fetch): 프로그램 카운터는 다음에 실행할 명령어의 주소를 가지고 있음
+이 주소를 주소 버스를 통해 메모리로 보내면, 메모리는 해당 주소에 있는 명령어를 데이터 버스를 통해 명령어 레지스터로 전달해줌
 
+2. 명령어 해석하기 (Decode): 명령어 레지스터에 들어온 명령어는 어떤 동작을 해야 하는지(opcode), 어떤 데이터를 사용할지 등을 알려줌
+이 정보는 ALU(산술 논리 장치)와 다른 레지스터들에 전달됨
+
+3. 명령어 실행하기 (Execute): ALU는 실제 계산을 수행하는 장치.
+ALU는 피연산자 A, B를 받아서 결과를 만들고, 그 결과를 누산기나 다른 레지스터로 보낼 수 있음.
+조건 판단이 필요한 명령어라면, 조건 코드 레지스터가 그 결과를 저장.
+
+4. 결과 저장하거나 다음 명령어로 이동: 연산 결과는 **누산기(ACC)**에 저장되거나, 메모리에 다시 저장됨.
+
+그런 다음, 다시 프로그램 카운터가 증가하면서 다음 명령어를 가져오는 과정이 반복
 
