--- a/roum/4주차.md
+++ b/roum/4주차.md
@@ -188,3 +188,14 @@ def split_into_blocks(image, block_size=8):
 
 - 4단계: 양자화, 사용하지 않은 숫자 0에 가깝게 줄임
 - 5단계: 남은 숫자 허프만 부화화를 통해 더 압축
+
+
+# 여러 프로그램을 동시에 실행할 때, 커널이 하는 일
+![kernel](https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Kernel_Layout.svg/1200px-Kernel_Layout.svg.png)
+
+- 커널: 각 프로그램을 서로 전환시켜줄 수 있는 관리자 프로그램. 컴퓨터의 모든 자원을 관리함
+
+1) CPU 시간 나눠주기 (스케줄링)
+2) 메모리 나눠주기
+3) 커널은 지금 실행 중인 모든 프로그램(=프로세스)을 목록으로 관리하고, 언제 멈추고, 다시 실행할지 조절
+4) 입출력 장치 공유
