--- a/roum/4주차.md
+++ b/roum/4주차.md
@@ -199,3 +199,37 @@ def split_into_blocks(image, block_size=8):
 2) 메모리 나눠주기
 3) 커널은 지금 실행 중인 모든 프로그램(=프로세스)을 목록으로 관리하고, 언제 멈추고, 다시 실행할지 조절
 4) 입출력 장치 공유
+
+# MMU는 왜 가상주소와 물리주소를 구분하나?
+
+용어	의미
+
+가상주소	프로그램이 "내가 사용하는 메모리 주소"라고 생각하는 주소
+
+물리주소	실제 램(RAM)에서의 진짜 주소
+
+MMU	가상주소를 진짜 주소(물리주소)로 바꿔주는 번역기
+
+- 구분하는 이유?
+
+1) 프로그램끼리 메모리를 나눠서 쓰게 하려고
+
+: 만약 진짜 RAM 주소만 쓰게 하면, 한 프로그램이 다른 프로그램 메모리를 침범할 수 있음. MMU가 가상주소를 따로 관리해서
+→ 각자만의 독립된 공간처럼 보이게해줌
+
+2) 메모리를 효율적으로 쪼개서 쓰려고
+   
+: 가상주소를 쓰면 필요한 만큼만 물리메모리에 매핑할 수 있음.
+
+자주 안 쓰는 부분은 디스크로 옮기고,
+필요한 부분만 RAM에 올리기 → 이게 페이징(paging)!
+
+3) 프로그램을 마음대로 옮겨 다니게 하려고
+4) 
+: 프로그램이 메모리 어디에 올라가든 상관없이
+가상주소는 항상 똑같게 유지할 수 있음
+
+예: main() 함수가 항상 0x0000에서 시작한다고 가정하면
+물리주소는 0x3000이든, 0x8000이든 상관없음
+MMU가 가상 → 물리로 알아서 매핑
+
