--- a/geumju/7주차.md
+++ b/geumju/7주차.md
@@ -2886,13 +2886,258 @@ Brian Doug Ken Mike Rob Steve
 > - BLOB: 이미지, 영상 등  
 > - CLOB: 문서, 텍스트 등
 
-# 인덱스
-> 읽으면 좋은 글이자 출처 글 : [MySQL 인덱스 구조와 원리의 이해](https://jeong-pro.tistory.com/242)
+
+# 📚 인덱스(Index)는 왜 필요할까? — 데이터 속에서 빠르게 찾기 위한 비밀 무기
 
 ![](https://velog.velcdn.com/images/prettylee620/post/2373967e-7f4a-448d-82b6-0451df60ac11/image.png)
 
+> 읽으면 좋은 글이자 출처 글 : [MySQL 인덱스 구조와 원리의 이해](https://jeong-pro.tistory.com/242)
 
+## 1) 문제의 시작: 데이터는 많고, 시간은 없다
+
+데이터베이스의 목적은 단순히 데이터를 "저장"하는 게 아니라  
+**원하는 데이터를 빠르게 찾는 것**에 있어요.
+
+하지만…
+
+- 테이블에 데이터가 수십만, 수백만 건이 쌓이면?
+- 조건에 맞는 데이터를 찾기 위해 **모든 행을 검사**해야 한다면?
+
+> 🐢 검색 성능은 느려지고,  
+> 😡 사용자 체감 속도는 낮아지고,  
+> 🔥 서비스 품질이 무너집니다.
+
+## 2) 색인(Index)의 원리: 책의 "색인 페이지"처럼!
+
+인덱스는 우리가 책에서 흔히 보는 **색인(index page)**과 똑같아요.
+
+- 원하는 단어가 어느 페이지에 있는지 **미리 정리**
+- 정렬된 상태로 빠르게 탐색 가능
+- 자주 찾는 용어만 담고, 위치만 요약해 기록
+
+> 📌 **인덱스는 검색을 빠르게 하기 위해 존재**합니다.  
+> → 대신 **삽입/수정/삭제 속도는 희생**해야 해요.
+
+
+## 3) 인덱스의 구조: B-Tree가 기본!
+
+### B-Tree 인덱스
 ![](https://velog.velcdn.com/images/prettylee620/post/97638940-209e-4602-bb51-0bf4c86829d8/image.png)
+
+![](https://velog.velcdn.com/images/prettylee620/post/6d3f9a76-09da-4d75-9240-75b529f51fb8/image.png)
+> 출처 : http://www.gurubee.net/wiki/pages/12517389
+
+- 대부분의 RDBMS는 B-Tree 또는 변형(B+Tree)을 사용
+- 루트 → 브랜치 → 리프 구조로 구성
+- 리프 노드에 실제 데이터 주소(또는 프라이머리 키)가 있음
+
+### InnoDB의 클러스터형 인덱스 구조
+- **프라이머리 키 값 순서대로** 데이터 파일 자체를 정렬 저장
+- 세컨더리 인덱스를 통해 찾으면  
+  → **리프 노드에 있는 프라이머리 키로 한 번 더 탐색 필요**
+
+
+## 4) 레코드 찾기 흐름 예시
+
+예: "Gad"라는 이름을 검색한다고 가정
+![](https://velog.velcdn.com/images/prettylee620/post/a0b351cc-1a44-4e9f-b5e2-edde380a8323/image.png)
+
+
+1. 루트 노드에서 "Gad"가 들어갈 **범위를 판단**
+2. 자식 노드 페이지 2번으로 이동  
+3. 2번 페이지에서 "Gad"를 발견  
+4. 해당 리프 노드가 가리키는 **프라이머리 키 주소**를 통해  
+   실제 레코드에 접근
+
+> ✅ 이 과정이 인덱스를 "탔다"고 부르는 것입니다
+
+```
+루트 노드
+  └─ "Aamer" vs "Jaana" 사이? → 자식 노드 2번
+    └─ "Gad" 있음 → 자식 노드 6번
+      └─ 프라이머리 키 주소 → 실제 레코드 찾기!
+```
+
+## 5) 인덱스의 트레이드오프
+
+| 장점 | 단점 |
+|------|------|
+| 빠른 조회(SELECT) | 느려지는 INSERT/UPDATE/DELETE |
+| 정렬된 데이터 기반 빠른 범위 탐색 | 정렬 유지 위한 오버헤드 |
+| 고성능 검색 최적화 | 공간 사용 증가, 관리 복잡 |
+
+> SELECT가 중심인 대부분의 서비스에서  
+> 인덱스의 이점은 **단점을 능가**합니다.
+
+
+## 6) 인덱스 사용을 결정짓는 요소들
+
+| 요소 | 설명 |
+|------|------|
+| 인덱스 키 크기 | 너무 크면 노드 당 키 수 줄어 → 성능 하락 |
+| 트리 깊이 | 깊을수록 접근 단계 많아짐 |
+| 선택도 | 유니크할수록, 골고루 퍼질수록 좋음 |
+| 읽는 레코드 수 | 전체의 20% 이하일 때 효율적 |
+| 유니크 속성 | 고유한 값이면 "즉시 종료" 가능 |
+
+
+## 7) 인덱스 검색 방식
+
+| 방식 | 설명 |
+|------|------|
+| 인덱스 레인지 스캔 | 일부 범위만 탐색 (이상적) |
+| 인덱스 풀 스캔 | 인덱스를 전체 순회 (비효율) |
+| 루스 인덱스 스캔 | 듬성듬성 읽는 최적화 |
+| 인덱스 스킵 스캔 | 선두 컬럼 없이도 부분 인덱스 탐색 (특수 조건만 가능) |
+
+
+## 8) 멀티 컬럼 인덱스의 핵심: **정렬 순서**
+
+```sql
+(dept_no, emp_no)
+(emp_no, dept_no)
+```
+
+- 쿼리 조건이 `WHERE dept_no = 'd001' AND emp_no >= 1000`이면?  
+  1번 인덱스가 훨씬 효율적!
+
+> ✅ 멀티 컬럼 인덱스는 항상 **앞에 오는 컬럼 순서대로 정렬됨**  
+> → 쿼리에 맞는 순서를 선택하는 것이 매우 중요해요
+
+
+## 9) 인덱스를 사용할 수 없는 경우
+
+| 비효율/불가 조건 | 이유 |
+|------------------|------|
+| NOT, NOT IN, NOT BETWEEN | 정렬로 범위를 좁히기 어려움 |
+| "%PRO" 형태 LIKE | 앞부분이 정렬되지 않음 |
+| SUBSTRING(column, 1, 1) = 'X' | 연산 후 값은 인덱스 순서 무효 |
+| 함수나 형 변환 포함 | 정렬 기반 탐색이 불가 |
+| 콜레이션 다름 | 인덱스 키 비교 불가능 |
+
+
+## 💬 마무리
+
+> 인덱스는 **빠른 조회의 시작점**이자,  
+> **올바른 설계가 아니면 오히려 성능의 덫**이 됩니다.
+
+인덱스를 잘 이해하고, 테이블 구조와 쿼리를 함께 고려해서  
+**읽을 때 빠르고, 쓸 때 효율적인 설계**를 해보세요 😊
+
+
+
+# 🧠 기억은 벽에 붙은 포스트잇처럼 – 해싱의 세계
+
+## 1) 왜 해싱이 필요할까?
+
+우리는 지금까지 데이터를 검색할 때 **리스트나 트리 같은 구조를 순차적으로 탐색**해야 했어요. 즉, “얘가 맞니?” “아니야?” 하고 **여러 번 비교**하며 찾아야 했죠.
+
+하지만 데이터를 많이 저장하거나 검색해야 하는 상황이라면, 이런 방식은 너무 느려요. 그래서 **훨씬 빠르게 원하는 정보를 찾을 수 있는 방법**이 필요했어요.
+
+그게 바로 오늘의 주인공, **해싱(Hashing)**입니다.
+
+## 2) 해싱이란 무엇인가요?
+
+해싱은 한마디로 말해,
+
+> **"키(찾고자 하는 기준)를 통해 계산된 위치에 바로 가서 데이터를 꺼내오는 방식"**이에요.
+
+예를 들어, 우리가 어떤 정보를 찾으려고 할 때, 그걸 **직접 주소를 계산해서 찾아가는 것**처럼 동작해요. 마치 친구 집에 갈 때, **주소만 알면 내비게이션으로 바로 가는 것처럼요.**
+
+## 3) 해시 함수의 역할
+
+해싱의 핵심은 바로 **해시 함수(hash function)**입니다.
+
+해시 함수는 다음과 같은 일을 합니다:
+
+- **입력 값(예: 문자열 'Hell')을 숫자로 변환**해서
+- **해시 테이블이라는 배열의 인덱스**로 바꿔주는 역할을 해요.
+
+> 예시: 문자열 'Hell' → ASCII 코드로 바꿔서 다 더한 값 → `mod 11` → 인덱스 4번에 저장!
+
+이때, 해시 테이블의 각 칸을 **버킷(bucket)**이라고 부릅니다.
+
+## 4) 해시 함수는 어떤 것이 좋을까?
+
+좋은 해시 함수는 이렇게 생겼습니다:
+
+1. **계산이 빠르다**  
+2. **골고루 버킷에 데이터를 분산시킨다**  
+3. **해시 테이블 크기를 소수(prime number)**로 정하면 충돌이 적다
+
+간단한 해시 함수 예시:
+```plaintext
+모든 문자의 ASCII 코드 값을 더한 뒤, 해시 테이블 크기(예: 11)로 나눈 나머지를 인덱스로 사용
+```
+
+## 5) 해시 충돌과 해결법
+
+하지만 세상은 그렇게 단순하지 않죠. 같은 해시값이 나오는 **충돌(collision)**이 발생할 수 있어요.
+
+예시:
+- 'Scarlet'과 'Alligator'는 같은 해시값을 가질 수 있어요! → 둘 다 **3번 버킷**으로 가야 해요.
+
+이때 사용하는 방법이 바로 **해시 체인(hash chain)**입니다.
+
+### 해시 체인의 방식
+
+```plaintext
+각 버킷에 연결 리스트(Linked List)를 달아서 충돌된 데이터를 함께 저장
+```
+
+예시 그림:
+```
+버킷 3:
+[Scarlet] → [Alligator]
+```
+
+이렇게 하면 충돌이 나도 데이터를 **모두 저장**할 수 있어요.
+
+### 삽입 방식의 차이
+
+- 빠른 삽입이 필요하다면: 새 데이터를 체인의 **앞쪽**에 넣어요
+- 검색을 빠르게 하고 싶다면: **삽입 정렬 방식**으로 넣어요
+
+## 6) 해시 테이블 확장
+
+- 저장할 데이터 수를 **미리 알 수 없을 경우** → 해시 테이블이 꽉 차요
+- 이럴 땐 **크기를 늘려야** 해요 → 단, 확장은 **비싼 연산**이에요 (많은 데이터 복사 필요)
+
+하지만 자주 일어나지 않으므로, **충돌보다 훨씬 낫다**고 볼 수 있어요.
+
+## 7) 완전 해시 (Perfect Hash)
+
+꿈의 해시 함수!  
+모든 키가 **절대 충돌하지 않도록** 각각 다른 인덱스에 정확히 저장된다면?
+
+이걸 **완전 해시(perfect hash)**라고 부릅니다.
+
+하지만 현실은…
+> “모든 키를 미리 알아야만 완전 해시 함수를 만들 수 있어요.”
+
+즉, **실제 시스템에선 거의 불가능한 이상형**입니다.
+
+## 📌 해시 테이블 요약 정리
+
+| 개념 | 설명 |
+|------|------|
+| 해시 함수 | 키를 인덱스로 바꾸는 함수 |
+| 해시 테이블 | 인덱스를 기반으로 데이터 저장 |
+| 버킷 | 해시 테이블의 각 칸 |
+| 충돌 | 서로 다른 키가 같은 인덱스를 가질 때 |
+| 해시 체인 | 충돌된 데이터를 연결 리스트로 저장 |
+| 완전 해시 | 충돌이 아예 없는 이상적 함수 |
+
+
+## 📍 그림으로 이해하기 
+
+### 🧩 해시 체인을 의인화한 그림
+
+![](https://velog.velcdn.com/images/prettylee620/post/912beab3-192d-49ce-a2d6-064bb9bc68d2/image.png)
+
+
+- 왼쪽에서부터 해시 함수가 각 캐릭터(키)를 바구니에 던지는 장면!
+- 같은 바구니에 들어가서 줄을 서는 캐릭터들 = 해시 체인!
 
 
 # 출처
