--- a/roum/5주차.md
+++ b/roum/5주차.md
@@ -192,3 +192,56 @@ Wi-Fi 신호 전송
   와이파이는 연결돼 있는데 구글, 네이버가 안 열림
 
 “인터넷 없음”, “연결되어 있지만 인터넷 사용 불가” 메시지
+
+
+# USB 저장장치의 작동 방식
+
+## USB?  (Universal Serial Bus)
+: 디지털 통신 및 전원 공급 목적으로 기기를 연결할 때 사용되는 케이블과 커넥터의 표준 규격 중 하나
+
+## 작동방식
+![usb](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7UMj8756Vcz8rCLOY8SLuRqvCF0UM0MtJaw&s)
+
+- 플래시 메모리(flash memory)란 데이터를 저장, 보관할 수 있는 반도체의 일종
+: 일단 데이터를 저장하면 삭제나 수정이 불가능한 롬(ROM)이나 삭제, 수정은 가능하지만 전원이 차단되면 모든 데이터가 사라지는 램(RAM)과 달리, 자유롭게 데이터를 저장하거나 삭제할 수 있으면서 전원이 꺼져도 데이터가 그대로 보존되는 특징이 있음.
+
+- 컨트롤러
+: USB 장치와 컴퓨터 간의 데이터 통신을 중재하고 관리하는 두뇌 역할의 칩셋.
+
+
+① 전원 공급 (Power)
+: USB 단자가 연결되면, 컴퓨터에서 전기(5V)를 공급받음. 이 전기로 플래시 메모리 칩과 컨트롤러가 작동 시작.
+
+② 디바이스 인식 (Enumeration)
+: 컴퓨터는 “이 장치가 어떤 USB 기기인가?”를 인식함. (저장장치인지, 키보드인지, 마우스인지)
+이건 USB 프로토콜에 따라 자동으로 수행됨.
+
+
+③ 데이터 전송 (Data Transfer)
+: USB 컨트롤러가 명령을 받아 플래시 메모리 칩에 읽기/쓰기 작업을 수행함.
+
+e.g. 파일을 복사하면 → 데이터가 **디지털 신호(0과 1)**로 전송되고
+플래시 메모리 내부 전자 회로에 저장됩니다.
+
+## USB 타입은 뭘까?
+![usb-type](https://velog.velcdn.com/images/brucehan/post/532fe0e3-4870-4aef-8124-aa7b9dead7ea/image.png)
+: 이건 모두 **모양(물리적 형태)**에 따른 구분이기 때문에,
+전송 속도나 기능과는 별개로, **"어떤 기기에 어떤 단자가 들어가는가?"**를 구분해주는 것.
+
+
+
+## 요즘 USB-C 타입으로 바뀌는 이유?
+
+1. 양면 사용 가능: 더 이상 방향 확인 필요 없음
+
+2. 더 빠른 속도: USB4, Thunderbolt 지원 시 최대 40Gbps
+
+3. 고속 충전 가능 (USB PD): 노트북 충전도 가능
+
+4. 다기능 단자: 데이터 + 충전 + 영상 출력(HDMI 없이도 모니터 연결)
+
+5. 미래 표준화: 유럽연합(EU) 등에서 단일 충전 포트 표준으로 지정함
+
+
+
+
