--- a/roum/7주차.md
+++ b/roum/7주차.md
@@ -208,6 +208,7 @@ nasm -f elf64 -o helloworld.o helloworld.s
 
 ![](../roum/assets/Screenshot%202025-04-24%20at%209.41.37 PM.png)
 => 리눅스용 명령어. mac용 어셈블리 코드로 다시 작성 필요!
+=> macOS에서 어셈블리어 실습은 까다로우니, 리눅스 환경에서 ELF 실행을 직접 다뤄보는 게 훨씬 낫고 직관적..
 
 ```
 ld -o helloworld helloworld.o
