--- a/roum/7주차.md
+++ b/roum/7주차.md
@@ -6,8 +6,10 @@
 - 레이블
 - 주석
 - 어셈블러
-- 부트스트랩(부트) 초기 컴퓨터 - css 부트스트랩의 어원?!
-
+- 부트스트랩(부트) 초기 컴퓨터
+<!--
+- css 부트스트랩의 어원?!
+-->
 ### 1) 어셈블리 언어란?
 
 : 기계어와 1:1 대응되는 저수준 언어. 사람에게는 읽기 어려운 이진수(기계어)를 **기호와 명령어(mnemonic)**로 표현한 것.
