--- a/roum/8주차.md
+++ b/roum/8주차.md
@@ -45,7 +45,188 @@ Scheme: 통신 매커니즘, 스킴으로 브라우저가 실행되는 컴퓨터
 
 Host: 통신하려는 서버 (IP 주소이거나 도메인 이름)
 
-## Custom tag
+# Web Component
+
+> WEB Component는 기능별로 재사용 가능한 코드 블록을 캡슐화하여 커스텀 엘리먼트를 생성하고 웹, 앱에서 활용할 수 있도록 해주는 다양한 기술들의 모음이다.
+
+W3C에서 제한적인 HTML Element의 한계를 개선하기 위해서 Custom Element를 만드는 기술인 웹 컴포넌트 표준 및 명세를 만들었다.
+HTML과 JS의 표준 기술로 만든 자체적인 사용자 정의 태그이기 때문에 프레임워크에 종속되지 않고 사용 가능
+
+```
+<div>{현재 시간}</div> // HTML 엘리먼트에서는 현재 시간을 의미하는 엘리먼트가 존재하지 않습니다.
+<current-time>{현재 시간}<current-time> // 개발자가 직접 커스텀 엘리먼트를 만들어서 확실한 의미를 부여할 수 있습니다.
+```
+
+## 왜 만들었냐?
+
+HTML 엘리먼트는 같은 요소라도 브라우저와 운영체제에 따라 다르게 보인다.
+
+![](https://d2.naver.com/content/images/2015/06/helloworld-188655-1.png)
+
+W3C에서는 이러한 이슈를 개선하고자 웹 컴포넌트(Web Component)라는 명세(Specification)를 만들게 된다.
+웹 컴포넌트는 Internet Explorer에서 지원하던 HTC(HTML Component)와 유사한 방식으로 개발자가 자체적으로 HTML 엘리먼트를 만드는 기술이다.
+
+## 구조
+
+웹 컴포넌트는 템플릿(Templates), 데코레이터(Decorators), 커스텀 엘리먼트(Custom Element), 섀도 DOM(Shadow DOM)으로 구성되어 있다.
+
+### 1) 템플릿(Templates)
+
+`<template>` 태그는 브라우저에 미리 로드되지만, 렌더링되지 않는 HTML 코드를 정의할 때 사용한다.
+
+- 특징:
+  - 렌더링 안 됨: `<template>` 내부의 HTML은 브라우저가 무시함
+  - 복사해서 사용: .content.cloneNode(true)로 복사하여 사용
+
+```
+<template id="my-template">
+  <style>
+    p { color: blue; }
+  </style>
+  <p>Hello, <span class="name"></span>!</p>
+</template>
+
+<script>
+  const template = document.getElementById("my-template");
+  const clone = template.content.cloneNode(true);
+  clone.querySelector(".name").textContent = "Roum";
+  document.body.appendChild(clone);
+</script>
+```
+
+### 2) 데코레이터(Decorators)
+
+데코레이터는 엘리먼트를 오버라이드(override)해 엘리먼트를 꾸미는 역할을 한다.
+
+```
+function Log(target: any, key: string) {
+  console.log(`${key} was decorated`);
+}
+
+class Example {
+  @Log
+  sayHi() {
+    console.log('Hi!');
+  }
+}
+```
+
+-> @Log가 sayHi() 메서드에 붙어서, 클래스가 로드될 때 콘솔에 로그를 출력
+
+### 3) 커스텀 엘리먼트(Custom Elements)
+
+커스텀 엘리먼트는 개발자가 새로운 엘리먼트를 만드는 것과 같다. 그래서 다양한 기능이 있는 커스텀 엘리먼트를 만들 수 있다. 커스텀 엘리먼트는 엘리먼트를 상속하고 있어 createElement 메서드나 생성자로 만들 수 있다.
+
+```
+class MyElement extends HTMLElement {
+  connectedCallback() {                                 // connectedCallback() → 엘리먼트가 DOM에 삽입될 때 실행
+    this.innerHTML = `<p>I'm a custom element!</p>`;
+  }
+}
+
+customElements.define('my-element', MyElement);
+
+
+<my-element></my-element>
+
+```
+
+### 4) 섀도 DOM(Shadow DOM)
+
+- 섀도 DOM은 DOM의 구조를 가지고 있으나 외부에는 노출되지 않은 DOM을 말하며 DOM의 구조를 캡슐화할 때 사용한다. 이를 통해 스타일/구조 충돌 없이 캡슐화된 UI를 만들 수 있다.
+- 일반적인 외부의 style은 적용되지 않고 섀도 DOM을 추가하거나 접근하기 위해서는 별도의 방법이 필요하다.
+- 위에서 설명한 템플릿 엘리먼트를 이용해 만들어진 데코레이터나 커스텀 엘리먼트는 모두 섀도 DOM으로 만들어진다.
+- 데코레이터에서 만들어진 섀도 DOM은 스크립트로 접근하거나 수정할 수 없으나, 그에 비해 커스텀 엘리먼트로 만들어진 섀도 DOM은 스크립트로 수정할 수 있다.
+
+```
+document.body.appendChild(document.createElement('span')).innerHTML
+  = '<style>div { background-color: #82b74b; }</style><div>야호!</div>';
+```
+
+이러한 스타일을 웹 브라우저에 추가하면, Style 스코프는 전역이기 때문에 존재하는 모든 페이지에 색이 입혀진다.
+
+![](https://user-images.githubusercontent.com/1215767/28501686-01e0f634-701c-11e7-9836-42f8e7d6104c.png)
+
+```
+document.body.appendChild(document.createElement('span'))
+  .attachShadow({mode: 'open'})
+  .innerHTML = '<style>div { background-color: #82b74b; }</style><div>야호!</div>';
+```
+
+attachShadow({mode: 'open'})함수 실행이 추가되면서, 쉐도우 루트를 생성하게 된다.
+이게 DOM 스코프의 경계선 역할을 한다.
+
+![](https://user-images.githubusercontent.com/1215767/28501709-71577d80-701c-11e7-8c78-0a2717bb7611.png)
+
+개발자 도구를 살펴보면 #shadow-root (open)이라는 것이 생겼고, 그 밑에 있는 style은 밖으로 새나가지 않는 다는 것을 확인할 수 있다. 반대로 글로벌에 존재하는 스타일 역시 #shadow-root (open)안에 있는 엘레먼트에는 영향을 미치지 못한다.
+
+![](https://user-images.githubusercontent.com/1215767/28501709-71577d80-701c-11e7-8c78-0a2717bb7611.png)
+
+쉐도우 돔은 돔 자체의 분리 역할을 한다. 즉 쉐도우 루트를 기준으로 id를 중복해서 써도 되고, 루트 안팎의 동일한 이름의 class역시 전혀 다른 클래스의 역할을 수행한다. 쉐도우 루트 밖에서 쉐도우 돔의 엘리먼트를 셀렉트 할 수도 없다. HTML 문서 하나에 수천 개 되는 엘리먼트의 스타일을 한 번에 모두 관리하기 위해 class 이름을 고민할 필요도, id의 중복이 무서워 쓰지 못하는 일도 필요 없다. 쉐도우 돔 하나당 하나의 문서를 관리하듯, 적절한 id를 배분하면, 혹은 그마저도 필요 없이 짧은 셀렉터로 충분히 그 역할을 수행할 수 있다.
+
+---
+
+다음 그림을 보면 왼쪽이 일반적인 DOM 트리이며 오른쪽이 섀도 DOM 트리이다.
+
+![](https://d2.naver.com/content/images/2015/06/helloworld-188655-3.png)
+
+<!--
+// DOM 트리의 코드
+
+```
+<x-slide is="x-slide">
+    <li><img src="http://helloworld.naver.com/img/1.jpeg" alt="1.jpeg" width="500px" height="333px" style=""></li>
+    <li><img src="http://helloworld.naver.com/img/2.jpeg" alt="2.jpeg" width="500px" height="333px" style=""></li>
+    <li><img src="http://helloworld.naver.com/img/3.jpeg" alt="3.jpeg" width="500px" height="333px" style=""></li>
+    <li><img src="http://helloworld.naver.com/img/4.jpeg" alt="4.jpeg" width="500px" height="333px" style=""></li>
+</x-slide>
+```
+-->
+
+// 섀도 DOM
+
+```
+<element name="x-slide" extends="ul" constructor="SlideControl">
+    <template>
+
+        <div class="slide">
+            <ul>
+                <content select="li"></content>
+            </ul>
+        </div>
+    </template>
+</element>
+```
+
+기존의 컴포넌트는 일반적인 DOM 트리가 렌더링된 후 해당 DOM 트리를 변경하기 때문에 리플로(reflow)와 리페인트(repaint) 등의 큰 비용이 발생한다.
+하지만 섀도 DOM을 사용하면 다음 그림과 같이 섀도 호스트(shadow host), 위의 코드로 말하면 x-silde 엘리먼트를 만나는 순간 섀도 DOM이 렌더링된다.
+
+-> 덧붙이자면 이 개념이 나온 시절이 HTML DOM 트리를 전체 렌더링하던 시절이라, DOM을 미리 그려놓고, 이후에 조작하는 일이 많았다. DOM 조작이 많다는 것은 트리를 계속 다시 그려야 한다는 의미이고, reflow 는 비싼 동작이기 때문에 섀도 돔에 대한 개념이 나왔을 것이라고 생각한다.
+
+// 이점
+
+- DOM을 나중에 수정하지 않아도 됨
+- DOM을 “한 번에 그리고 끝내기 때문에” → Reflow/Repaint를 줄일 수 있음
+- Shadow DOM은 외부 CSS/JS와 격리되기 때문에 영향 범위도 작음 → 성능 최적화에 유리
+
+![](https://d2.naver.com/content/images/2015/06/helloworld-188655-4.png)
+
+커스텀 엘리먼트가 렌더링된 모습을 섀도 DOM과 같이 보면 다음 그림처럼 표현이 된다.
+
+![](https://d2.naver.com/content/images/2015/06/helloworld-188655-5.png)
+
+실제로 렌더링되어 표현된 모습은 다음과 같다.
+
+```
+<div class="slide">
+    <ul>
+        <li><img src="http://helloworld.naver.com/img/1.jpeg" alt="1.jpeg" width="500px" height="333px" style=""></li>
+        <li><img src="http://helloworld.naver.com/img/2.jpeg" alt="2.jpeg" width="500px" height="333px" style=""></li>
+        <li><img src="http://helloworld.naver.com/img/3.jpeg" alt="3.jpeg" width="500px" height="333px" style=""></li>
+        <li><img src="http://helloworld.naver.com/img/4.jpeg" alt="4.jpeg" width="500px" height="333px" style=""></li>
+    </ul>
+</div>
+```
 
 ## DOM(Document Object Model)
 
@@ -58,8 +239,11 @@ CSS는 나중에 만들어진 언어이다. (몰랐어..)
 
 자바스크립트는 에크마스크립트ECMAScript 라고 알려져 있고, 에크마는 피부 상태(acne) 와 비슷한 단어로 들려서 브라우저가 더 신뢰할 수 없게 되었다... 고 한다.
 
+<!-->
+
 ## SVG는 왜 미운오리새끼인가?
 
 ## AJAX 와 AJAJ
 
+-->
 JSON은 자바스크립트 객체 표기법을 줄인 말이다. 자바스크립트 객체를 사람이 읽기 쉬운 형식으로 표현한 것이다.
