--- a/roum/9주차.md
+++ b/roum/9주차.md
@@ -1,3 +1,94 @@
 # 10장 애플리케이션과 프로그래밍
 
+- 버퍼
+
+![버퍼](https://blog.kakaocdn.net/dn/29Rf0/btrsLv6x3mT/xqDatYyeLgTNWGraAUVD4k/img.png)
+
+## 브라우저와 운영체제의 역할 차이
+
+### 운영체제: 컴퓨터의 하드웨어를 관리하는 프로그램
+
+- 예시: Windows, macOS, Linux
+
+- 역할:
+
+  - 키보드, 마우스, 파일, 프린터 같은 장치와 프로그램 사이를 연결
+  - 프로그램이 저장공간에 파일을 저장하거나 읽는 것, 화면에 무언가를 보여줌
+  - C 언어는 파일 입출력 같은 기능을 비교적 직접적이고 쉽게 작성할 수 있다. 이는 운영체제가 제공하는 인터페이스를 직접 사용할 수 있기 때문
+
+![](https://user-images.githubusercontent.com/45457678/85942661-a76d1200-b965-11ea-9952-0cae1dbad0c6.png)
+
+### 브라우저
+
+- 예시: Chrome, Safari, Edge, Firefox
+
+- 역할:
+  - HTML, CSS, JavaScript로 만든 웹페이지를 화면에 보여줌
+  - 하지만 보안 때문에 자바스크립트가 운영체제의 장치나 파일에 직접 접근하지 못하게 막음
+  - 브라우저는 운영체제 위에서 돌아가지만, 운영체제처럼 파일이나 키보드 장치를 직접 제어하진 않음
+  - 그래서 브라우저에서 실행되는 자바스크립트 프로그램은 운영체제와 직접 통신하지 못하고, 필요한 기능을 위해서는 전혀 다른 방식의 인터페이스나 API를 써야 한다
+    (예: Web API, 파일 업로드를 위한 <input type="file"> 등).
+
+![](https://joongbu.raonctf.com/static/essential/images/system/system_software_01.jpg)
+
 # 11장 성능향상을 위한 알고리즘 기법
+
+## MIP MAP
+
+: 밉맵은 컴퓨터그래픽에서 텍스처 맵핑에 사용되는 기술로 원본 텍스처의 다양한 해상도(점차적으로 더 작아지는)로 미리 준비된 이미지 버전 목록을 의미한다.
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F253A38445723696418)
+
+128x128 크기의 이미지가 있을 때, 그 보다 작아지는 이미지를 미리 여러 개 만들어서 저장해 놓은 것임.
+
+### 밉맵을 쓰는 이유?
+
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F225B8D43572369A41A)
+
+3D 게임에서 멀리 있는 물체는 화면에 작게 보이니까, 원본 텍스처의 상세한 정보가 필요하지 않는다.
+오히려 큰 텍스처를 그대로 쓰면 오히려 품질과 성능이 안 좋아짐.
+
+밉맵을 사용하여 텍스처 피라미드(가장 상위 원본 텍스처의 해상도부터 시작하여 2의 거듭제곱 비율로 점차적으로 작아지는 해상도를 가진 텍스처들)에서 적절한 해상도를 선택하고 멀리 떨어진 객체에 더 작은 해상도의 텍스처를 사용한다.
+이 경우 텍셀(텍스처 픽셀)의 수가 감소하여 렌더링 속도를 높일 수 있다.
+
+밉맵을 사용하면 메모리 사용량이 늘어나지만 성능을 향상시키고 시각적인 품질을 유지할 수 있다.
+
+## 정수 연산은 비용이 싸다
+
+곱셈이나 나눗셈은 비용이 더 많이 든다. 부동소수점 연산은 더더욱 비싸다.
+
+### 고정소수점
+
+: 소수점 위치를 고정해 놓고 계산하는 방식
+
+### 부동소수점
+
+: 소수점의 위치가 고정되어 있지 않은 숫자 표현 방식, 근사값을 표현하기 위해 필요함.
+
+![](https://blog.kakaocdn.net/dn/Y272g/btqD8hvJYvJ/knTwtokIn05KQkczYbjVpK/img.png)
+
+- 부호: 양수, 음수 여부
+- 지수: 실수 유효 숫자
+- 가수: 소수점 위치를 어디로 이동할지를 나타냄
+
+```
+예: 12.5
+(정수 부분 12 → 이진수
+12 ÷ 2 = 6, ... 0
+6 ÷ 2 = 3, ... 0
+3 ÷ 2 = 1, ... 1
+1 ÷ 2 = 0, ... 1
+
+소수 부분 0.5 → 이진수
+0.5 × 2 = 1.0 → ... 1)
+→ 이진수로는 1100.1
+
+→ 부동소수점으로는 약:
+1.1001 × 2³
+
+부호: 0 (양수)
+가수: 1001 (맨 앞의 1은 생략, 정규화된 수는 항상 1.~~ 형태이기 때문)
+지수: 3
+```
+
+🐼 1962년에는 부동소수점 연산이 아주 비쌌기 때문에 금지되었었다.
