--- a/roum/10주차.md
+++ b/roum/10주차.md
@@ -60,9 +60,20 @@
 
 ## 멀티코어와 스레드
 
+- 반도체
+
+듀얼 쿼드코어
+GPU
+
+쿼드코어 VS 멀티코어(1CPU에 코어가 여러개) vs 멀티프로세서(CPU 가 여러개 - 클라우드) vs 멀티프로그래밍(멀티로 하는 척)
+
 # 브라우저의 동시성
 
 자바스크립트는 싱글 스레드인데, 어떻게 동시성을 가지게 될까?
+
+\*\* Javascript가 싱글스레드 기반의 언어라는 말은 Javascript가 하나의 메인스레드와 하나의 콜스택을 갖고 있다는 말이다.
+![](https://velog.velcdn.com/images%2Feamon3481%2Fpost%2F9a805692-a04e-43da-93cf-81de3984cc37%2FJSEn.PNG)
+
 일단, 자바스크립트는 현재 쓰이는 용도로 만들어진 언어가 아니었다. 자바스크립트의 본래 목표는 더 빠르게 사용자 피드백을 제공하고 인터넷 트페픽을 줄이는 것이었다. 당시에는 인터넷이 아주 느렸기 때문이다.
 
 자바스크립트가 사용자 이벤트에 응답하는 짧은 프로그램을 실행하기 위해 만들어졌기 때문에, 자바스크립트 구현은 **이벤트 루프 모델**을 사용한다.
@@ -162,3 +173,10 @@ getData().then(function(tableData) {
 - rejected(실패): 비동기 처리가 실패하여 프로미스가 에러를 반환한 상태
 
 ![](https://joshua1988.github.io/images/posts/web/javascript/promise.svg)
+
+이벤트 루프 - 교도관
+콜스텍 테스크큐 등등 관찰함
+web api - fetch ...
+
+마이크로 테스크큐 - 테스크큐보다 우선순위가 높음 - 프라미스 함수의 콜백을 저장하는 곳임
+테스크큐 - 비동기 함수 위임할때 그 인자로 함수를 넣을 수 있음 -callback이 테스크큐에 저장됨
