--- a/roum/11주차.md
+++ b/roum/11주차.md
@@ -22,3 +22,26 @@
 - 프록시가 공격자 추적을 어렵게 함
 
 - 메타 데이터
+
+# 치환 암호
+
+암호화/복호화
+평문/암호문
+
+# 공개키 암호
+
+: 서로 연관된 키 한 쌍을 사용함 -> 공개키/비밀키 =. ㅣ대칭 시스템
+
+트랩토어 함수: 계산 비용이 많이 든다.
+
+# 전방향 안전성
+
+# 암호학적 해시 함수
+
+# 디지털 서명과 인증 Authentication
+
+# 공개키 인프라
+
+공개키 인프라 스트럭처 / 인증기관 CA이 인증서를 발행해준다.
+
+# 블록체인
