--- a/roum/11주차.md
+++ b/roum/11주차.md
@@ -22,3 +22,110 @@
 - 프록시가 공격자 추적을 어렵게 함
 
 - 메타 데이터
+
+
+-----
+
+
+# 인증과 인가 Authentication/ Authorization 
+![](https://images.velog.io/images/djaxornwkd12/post/24d9f2d0-25c5-4949-bdfb-ae0f170d988a/security-authentication-user-authorization-websites.png)
+
+```
+인증(Authentication) : 본인이 누구인지 확인 (로그인)
+승인(Authorization) : 특정 리소스에 권한이 있는지 확인 (등급 권한)
+```
+
+## 인증(Authentication)
+서버에서 사용자가 누군지 모르기 때문에 인증인 로그인을 요구한다.
+
+![](https://lh6.googleusercontent.com/proxy/UGwEuYRD1Tg4NYP5SbFJXPyGouV1TG--DJIJ01vco9menNNyddIgJ2F6hBbpGGcVV7P7OTSHG4_eh1MOwP9rlJLkYmW63VZpqMw)
+
+## 인가/승인/권한부여 (Authorization)
+
+그래서 회원가입을 한 후 게시물을 보려고 하는데,
+특정 게시판에서 '00 등급 이상부터 읽기가 가능합니다.' 라는 경고창이 뜬다.
+
+이를 승인되지 않은 상황이라고 한다.
+
+서버 입장에서는, 현재 요청자가 회원가입을 하였기 때문에 누구인지 알지만, 회원 등급에 따라 접근 권한이 없다고 생각하여 차단한 것이다.
+
+## 대표 프로토콜 
+
+### OAuth
+
+> OAuth는 인터넷 사용자들이 비밀번호를 제공하지 않고 다른 웹사이트 상의 자신들의 정보에 대해 웹사이트나 애플리케이션의 접근 권한을 부여할 수 있는 공통적인 수단으로서 사용되는, 접근 위임을 위한 개방형 표준이다. 
+
+쉽게 말하자면, 우리의 서비스가 우리 서비스를 이용하는 유저의 타사 플랫폼 정보에 접근하기 위해서 권한을 타사 플랫폼으로부터 위임 받는 것이다.
+
+e.g. 소셜 로그인
+
+
+### 용어 정리
+- Resource Owner : 리소스 소유자. 우리의 서비스를 이용하면서, 구글, 페이스북 등의 플랫폼에서 리소스를 소유하고 있는 사용자이다.
+- Authorization & Resource Server: Authorization Server는 Resource Owner를 인증하고, Client에게 액세스 토큰을 발급해주는 서버이다. Resource Server는 구글, 페이스북, 트위터와 같이 리소스를 가지고 있는 서버를 말한다.
+    - Authorization Server와 Resource Server는 공식문서상 별개로 구분되어 있지만, 별개의 서버로 구성할지, 하나의 서버로 구성할지는 개발자가 선택하기 나름
+- Client: Resource Server의 자원을 이용하고자 하는 서비스. 보통 우리가 개발하려는 서비스가 될 것이다.
+?
+
+#### 인증과정
+
+![](https://developers.payco.com/static/img/@img_guide.jpg)
+
+사용자가 직접 로그인을 하는 것이 아닌, 서비스가 사용자를 대신하여 유효성 판단 후 서버에 요청해 대신 로그인하는 것이다.
+
+1. 사용자로부터 동의 얻기
+    - 사용자의 개인정보를 마구 악용하면 안되기 때문에, 동의를 구해야 한다.
+2. Resource Server로부터 client 신원확인
+    - 로그인을 대행해주는 서비스(kakao) 입장에서도, client 자체에 대한 유효성 검증이 필요하다. 따라서 client를 구분하는 값을 전달한다.
+
+
+![](https://hudi.blog/static/7dced69214d91d7f1f0892720b1b5e1b/ca1dc/oauth2.0-process.png)
+
+
+#### 1~2 로그인 요청
+사용자가 SNS Login 버튼을 클릭하면, Client는 OAuth 프로세스를 시작하기 위해 사용자의 브라우저를 Authorization Server로 보내야 한다.  
+
+클라이언트는 이때 Authorization Server가 제공하는 Authorization URL에 response_type , client_id , redirect_uri , scope 등의 매개변수를 쿼리 스트링으로 포함하여 보낸다.
+
+예를 들어 어떤 OAuth 2.0 서비스의 Authorization URL이 https://authorization-server.com/auth 라면, 결과적으로 Client는 아래와 같은 URL을 빌드할 것이다.
+
+```
+https://authorization-server.com/auth?response_type=code
+&client_id=29352735982374239857
+&redirect_uri=https://example-app.com/callback
+&scope=create+delete
+```
+
+- response_type : 반드시 code 로 값을 설정해야한다. 인증이 성공할 경우 클라이언트는 Authorization Code를 받을 수 있다.
+- client_id : 애플리케이션을 생성했을 때 발급받은 Client ID
+- redirect_uri : 애플리케이션을 생성할 때 등록한 Redirect URI
+- scope : 클라이언트가 부여받은 리소스 접근 권한.
+
+    Redirect URI
+    
+    : OAuth 2.0 서비스는 인증이 성공한 사용자를 사전에 등록된 Redirect URI로만 리디렉션 시킨다. 승인되지 않은 URI로 리디렉션 될 경우, Authorization Code를 중간에 탈취당할 위험성이 있기 때문이다. 일부 OAuth 2.0 서비스는 여러 Redirect URI를 등록할 수 있다.
+
+    Redirect URI는 기본적으로 보안을 위해 https만 허용된다.
+
+
+#### 3 ~ 4. 로그인 페이지 제공, ID/PW 제공
+클라이언트가 빌드한 Authorization URL로 이동된 Resource Owner는 제공된 로그인 페이지에서 ID와 PW 등을 입력하여 인증할 것 이다.
+
+#### 5 ~ 6. Authorization Code 발급, Redirect URI로 리디렉트
+인증이 성공되었다면, Authorization Server 는 제공된 Redirect URI로 사용자를 리디렉션시킬 것 이다. 이때, Redirect URI에 Authorization Code를 포함하여 사용자를 리디렉션 시킨다. 
+
+Authorization Code란 Client가 Access Token을 획득하기 위해 사용하는 임시 코드이다. 이 코드는 수명이 매우 짧다. (일반적으로 1~10분)
+
+
+#### 7 ~ 8. Authorization Code와 Access Token 교환
+
+Client는 Authorization Server에 Authorization Code를 전달하고, Access Token을 응답받는다. Client는 발급받은 Resource Owner의 Access Token을 저장하고, 이후 Resource Server에서 Resource Owner의 리소스에 접근하기 위해 Access Token을 사용한다.
+
+Access Token은 유출되어서는 안된다. 따라서 제 3자가 가로채지 못하도록 HTTPS 연결을 통해서만 사용될 수 있다.
+
+
+#### 9. 로그인 성공
+위 과정을 성공적으로 마치면 Client는 Resource Owner에게 로그인이 성공하였음을 알린다.
+
+#### 10 ~ 13. Access Token으로 리소스 접근
+이후 Resource Owner가 Resource Server의 리소스가 필요한 기능을 Client에 요청한다. Client는 위 과정에서 발급받고 저장해둔 Resource Owner의 Access Token을 사용하여 제한된 리소스에 접근하고, Resource Owner에게 자사의 서비스를 제공한다
